sphere MATLAB code tested

--- a/pysrc/球面定位算法.md
+++ b/pysrc/球面定位算法.md
@@ -1,6 +1,6 @@
 # 球面定位算法
 ##问题描述
-假设有 N 个传感器，第 i 个传感器坐标为$(R,\alpha ,\beta ,\gamma )$。其中 $R$ 是球面的半径，$\alpha ,\beta ,\gamma$分别是传感器坐标向量与$x_i,y_i,z_i$轴所成的角度。
+假设有 N 个传感器，第 i 个传感器坐标为$(R,\theta ,\varphi)$。其中 $R$ 是球面的半径，$\theta ,\varphi$定义见[维基百科](https://zh.wikipedia.org/wiki/%E7%90%83%E5%BA%A7%E6%A8%99%E7%B3%BB)。
 
 对于一个声发射源，第 i 个传感器测得的到达时间为$t_i$。
 
@@ -11,7 +11,7 @@
 ##求解过程
 作一个过声发射源点 P 、第 i 个传感器 $S_i$ 的球上大圆，如图。
 
-![](media/14764311610323/14764346470839.png)
+![](http://o9gmysn8m.bkt.clouddn.com/14764346470839.png)
 
 弧长$PS_i$就是声波走过的距离$vt_i$，弦长$PS_i$是两个坐标的直线距离$\sqrt{(x-x_i)^2+(y-y_i)^2+(z-z_i)^2}$。
 
@@ -27,16 +27,16 @@ $$
 
 可以化简为
 $$
-2x_ix+2y_iy+2z_iz=4R^2\sin^2(vt_i/2R)-2R^2
+x_ix+y_iy+z_iz=-2R^2\sin^2(vt_i/2R)+R^2
 $$
 
-令$b_i=4R^2\sin^2(vt_i/2R)-2R^2$
+令$b_i=-2R^2\sin^2(vt_i/2R)+R^2$
 
 又有球面坐标的关系
 $$
-x_i = R\cos \alpha \\
-y_i = R\cos \beta \\
-z_i = R\cos \gamma
+x_i = R\sin \theta \cos \varphi \\
+y_i = R\sin \theta \sin \varphi \\
+z_i = R\cos \theta
 $$
 
 即求解
@@ -46,20 +46,30 @@ $$
 
 其中
 $$
-A = \left[\begin{array}{ccc}2x_1 & 2y_1 & 2z_1 \\2x_2 & 2y_2 & 2z_2 \\\vdots & \vdots & \vdots \\
-2x_n & 2y_n & 2z_n \\\end{array} \right]
+A = \left[
+\begin{array}{ccc}
+x_1 & y_1 & z_1 \\
+x_2 & y_2 & z_2 \\
+\vdots & \vdots & \vdots \\
+x_n & y_n & z_n \\
+\end{array} \right]
 $$
 
 $$
-b=\left[\begin{array}{c}b_1 \\
+b=\left[
+\begin{array}{c}
+b_1 \\
 b_2 \\
 \vdots \\
-b_n\end{array} \right]
+b_n
+\end{array} \right]
 $$
 
 则
 $$
 x= (A^TA)^{-1}A^Tb
 $$
+
+
 
 
