--- a/doc/球面定位算法.md
+++ b/doc/球面定位算法.md
@@ -1,5 +1,7 @@
 # 球面定位算法
-##问题描述
+
+## 问题描述
+
 假设有 N 个传感器，第 i 个传感器坐标为$(R,\theta ,\varphi)$。其中 $R$ 是球面的半径，$\theta ,\varphi$定义见[维基百科](https://zh.wikipedia.org/wiki/%E7%90%83%E5%BA%A7%E6%A8%99%E7%B3%BB)。
 
 对于一个声发射源，第 i 个传感器测得的到达时间为$t_i$。
@@ -8,10 +10,11 @@
 
 求声发射源的位置$(x,y,z)$。
 
-##求解过程
+## 求解过程
+
 作一个过声发射源点 P 、第 i 个传感器 $S_i$ 的球上大圆，如图。
 
-![](http://o9gmysn8m.bkt.clouddn.com/14764346470839.png)
+![](./cube.png)
 
 弧长$PS_i$就是声波走过的距离$vt_i$，弦长$PS_i$是两个坐标的直线距离$\sqrt{(x-x_i)^2+(y-y_i)^2+(z-z_i)^2}$。
 
@@ -69,7 +72,3 @@ $$
 $$
 x= (A^TA)^{-1}A^Tb
 $$
-
-
-
-
